# explorer-tab-merger

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  app.manifest  build.rs
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-05-30-explorer-tab-merger.md
docs/superpowers/specs/: 2026-05-30-explorer-tab-merger-design.md
src/: autostart.rs  cloak.rs  conflicts.rs  lib.rs  log.rs  main.rs  shell_events.rs  single_instance.rs  tab_merger.rs  win_util.rs
tests/: autostart_test.rs  log_test.rs
