[package]
name = "explorer_tab_merger"
version = "1.0.0"
edition = "2021"
description = "Auto-merge new File Explorer windows into tabs (minimal, no-UI)"
publish = false

[lib]
name = "explorer_tab_merger"
path = "src/lib.rs"

[[bin]]
name = "explorer_tab_merger"
path = "src/main.rs"

[dependencies]
# windows-core is needed as a direct dep because the #[implement] proc-macro generates
# code that references `::windows_core::...` paths.
windows-core = "0.58"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",                  # for SECURITY_ATTRIBUTES (required by RegCreateKeyExW, CreateMutexW)
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",  # process enumeration for conflict detection
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_Globalization",
    "implement",                       # enables #[implement] macro + _Impl traits
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
