[package]
name = "explorer_tab_merger"
version = "1.0.1"
edition = "2021"
description = "Auto-merge new File Explorer windows into tabs (minimal, no-UI)"
publish = false

[lib]
name = "explorer_tab_merger"
path = "src/lib.rs"

[[bin]]
name = "explorer_tab_merger"
path = "src/main.rs"

[dependencies]
# windows-core is needed as a direct dep because the #[implement] proc-macro generates
# code that references `::windows_core::...` paths.
windows-core = "0.58"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",                  # SECURITY_ATTRIBUTES (RegCreateKeyExW, CreateMutexW)
    "Win32_System_Com",                # IDispatch, IConnectionPoint{Container}, IServiceProvider, CoCreateInstance
    "Win32_System_Ole",                # IShellBrowser, IShellView (PIDL fallback chain)
    "Win32_System_Registry",           # HKCU autostart
    "Win32_System_Threading",          # CreateMutexW for single-instance
    "Win32_System_Diagnostics_ToolHelp", # process enumeration for conflict detection
    "Win32_UI_Shell",                  # IShellWindows, IWebBrowser2, IShellBrowser/View/FolderView, SHGetNameFromIDList
    "Win32_UI_Shell_Common",           # ITEMIDLIST / PIDL types
    "Win32_UI_WindowsAndMessaging",    # everything window-related
    "Win32_UI_Accessibility",          # SetWinEventHook / HWINEVENTHOOK
    "implement",                       # #[implement] macro + _Impl traits
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
